Fixed shift

--- a/css/article/style.css
+++ b/css/article/style.css
@@ -490,7 +490,7 @@ cursor: pointer
     list-style: none;
     padding: 0;
     margin: 0;
-    line-height: 50px;
+    line-height: 35px;
     height: 100%;
     vertical-align: middle;
     text-align: center;
